--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-dom": "^16.5.2",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "node-telegram-bot-api": "^0.40.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
